@@ -1,7 +1,16 @@
 Summary of important user-visible changes for the miscellaneous package
 ------------------------------------------------------------------------
 ===============================================================================
-miscellaneous-1.2.0   Release Date: 2012-XX-XX  Release Manager:
+miscellaneous-1.X.X   Release Date: 201X-XX-XX  Release Manager:
+===============================================================================
+
+ ** The following functions have been deprecated in previous releases
+    of the miscellaneous package and have now been removed:
+
+      apply       map         partarray   temp_name
+
+===============================================================================
+miscellaneous-1.2.0   Release Date: 2012-10-16  Release Manager: Carnë Draug
 ===============================================================================
  ** New functions:
    truncate: truncates a number to a given precision.
@@ -24,7 +33,7 @@ miscellaneous-1.2.0   Release Date: 2012-XX-XX  Release Manager:
  ** Package is now dependent on the general (>= 1.3.1)
 
 ===============================================================================
-miscellaneous-1.1.0   Release Date: 2012-03-24  Release Manager:
+miscellaneous-1.1.0   Release Date: 2012-03-24  Release Manager: Carnë Draug
 ===============================================================================
 
  ** IMPORTANT NOTE:
